# mmal-leak-test

./: CMakeLists.txt  README.md  buildme.sh  mmal-leak.c
